ui fix photo cropped, data updates

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -252,16 +252,21 @@ a.button:hover {
   min-width: 100%;
   flex-grow: 1;
   overflow: hidden;
+  padding: 40px;
   img {
     display: block; 
     width: 100%;
   }
   @include media (desktop) {
     min-width: 440px;
-    img {
-      min-height: 100%;
-      width: auto;
-    }
+    padding-right: 0;
+  }
+}
+
+.card:nth-of-type(odd) .card__img {
+  @include media (desktop) {
+    padding-left: 0;
+    padding-right: 40px;
   }
 }
 
@@ -326,8 +331,8 @@ a.button:hover {
   font-size: 22px;
 }
 
-
 .card__details {
+  word-break: break-word;
   h4 {
     color: $secondary;
     margin: 30px 0 5px;
